--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -183,6 +183,10 @@
 	      <code>-march</code> and <code>-mtune</code> settings.
 	      See the documentation of those options for details.</li>
 	</ul></li>
+     <li>The necessary support to build the Java runtime libraries has 
+	 been added to the S/390 port.  Java is now enabled by default
+	 on <code>s390-*-linux*</code> and <code>s390x-*-linux*</code>
+	 targets.</li>
   </ul>
 
 
