Properly escape < and >.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -178,7 +178,8 @@ you may want to check out include:</p>
   <li>mips-3_4-rewrite-branch: This branch is for largish rewrites to the
       mips backend.  This has a long term goal of no macro instructions and
       updating the port to the current infrastructure.  Send patches to
-      Eric Christopher <<a href="mailto:echristo@redhat.com">echristo@redhat.com</a>> and CC: <<a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>> for inclusion.</li>
+      Eric Christopher &lt;<a href="mailto:echristo@redhat.com">echristo@redhat.com</a>&gt;
+      and CC: &lt;<a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>&gt;.</li>
 </ul>
 
 
