Fix two markup issues.

--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -126,7 +126,7 @@
 
 <hr />
 
-<a name="download"><h3>Downloading</h3></a>
+<h3><a name="download">Downloading</a></h3>
 
 <p>Snapshots are located in the GCC FTP area, in the libstdc++ subdirectory,
    <code>&lt;URL:ftp://gcc.gnu.org/pub/gcc/libstdc++/&gt;</code>.  You will
@@ -145,6 +145,7 @@
    out the <code>gcc</code> module will also get the library sources; to
    retrieve only the library, check out the <code>libstdc++-v3</code> module
    instead.
+</p>
 
 </td></tr></table></td></tr></table>
 
