--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -86,7 +86,7 @@
 <tr bgcolor="#FFFFBB"><td>
 <p>
 <a href="bugs.html">Report a bug</a><br />
-<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">GNATS</a><br />
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">Bug database</a><br />
 <a href="gnatswrite.html">...write access</a><br />
 <a href="bugs.html#known">Known bugs</a>
 </p>
@@ -126,12 +126,11 @@ and help testing GCC, and we provide access to our development sources with
 <a href="cvs.html">anonymous CVS</a> and <a href="snapshots.html">weekly
 snapshots</a>.</p>
 
-<p>We will provide regular, high quality
-<a href="releases.html">releases</a>.
-We want those releases to work well on a variety of native (including
-GNU/Linux) and cross targets and use an extensive
-<a href="http://gcc.gnu.org/testresults/">test suite</a> as well as
-<a href="benchmarks/">various benchmark suites
+<p>We strive to provide regular, high quality
+<a href="releases.html">releases</a>, which we want to work well on a variety
+of native (including GNU/Linux) and cross targets. To that end, we use an
+extensive <a href="http://gcc.gnu.org/testresults/">test suite</a> as well
+as <a href="benchmarks/">various benchmark suites
 and automated testers</a> to maintain and improve quality.</p>
 
 
