Have release dates directly besides version number.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -141,16 +141,15 @@ and automated testers</a> to maintain and improve quality.</p>
 
 <dl>
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.2/changes.html">GCC 3.2</a> 
+  <a href="gcc-3.2/changes.html">GCC 3.2</a> (released 2002-08-14)
 </dt><dd>
   Open for all maintainers; fixes for regressions only.
 </dd>
 
 <dt><strong>Previous release series:</strong>
-  <a href="gcc-3.1/">GCC 3.1.1</a>
+  <a href="gcc-3.1/">GCC 3.1.1</a> (released 2002-07-26) 
 </dt><dd>
-  GCC 3.1.1 (released 2002-07-26) is the last 3.1 release;
-  the 3.1-branch became the
+  GCC 3.1.1 is the last 3.1 release; the 3.1-branch became the
   <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
 </dd>
 
