Markup typo fixes: 	* buildstat.html: Close <a> with </a>. 	* mirrors.html: Remove a number of unpaired </a> tags. 	* readings.html: Remove stray space in URL. 	* egcs-1.1/schedule.html: Correct link URLs. 	* libstdc++/thanks.html: Move misplaced </p> to proper location. 	* projects/beginner.html: Fix <li>/<p> nesting. 	* projects/cfg.html: Close <h2> with </h2>, not </h3>. 	* projects/optimize.html: Remove double <sup>.

--- a/htdocs/egcs-1.1/schedule.html
+++ b/htdocs/egcs-1.1/schedule.html
@@ -10,7 +10,7 @@
 (EGCS 1.1).</p>
 
 <p>This page is meant to provide information about the current schedule
-for EGCS 1.1, the <a href="EGCS 1.1-test.html">testing/release criteria</a>
+for EGCS 1.1, the <a href="egcs-1.1-test.html">testing/release criteria</a>
 for EGCS 1.1, <a href="features.html">new features</a> to be found in
 EGCS 1.1, etc.</p>
 
@@ -24,10 +24,10 @@ are being accepted.  All checkins to the EGCS 1.1 tree must be approved by
 the release manager (law@cygnus.com).  We are shooting for an end of the month
 release.</p>
 
-<p> July 14, 1998.  We have created the <a href="EGCS 1.1-branch.html">
+<p> July 14, 1998.  We have created the <a href="egcs-1.1-branch.html">
 EGCS 1.1 branch</a>. </p>
 
-<p> July 7, 1998.  The <a href="EGCS 1.1-test.html">testing plan</a> is not
+<p> July 7, 1998.  The <a href="egcs-1.1-test.html">testing plan</a> is not
     ready yet, but we are actively working on solidifying the testing plan.</p>
 
 <p>The tentative schedule for the EGCS 1.1 release is:</p>
