--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -165,7 +165,8 @@
 
 <p>We'd also like to thank the folks who have contributed time and
    energy in testing libstdc++-v3, especially those sending in testsuite
-   evaluations and documentation corrections:
+   evaluations and documentation corrections:</p>
+
 <ul>
   <li>David Billinghurst</li>
   <li>David Gilbert</li>
@@ -176,7 +177,6 @@
   <li>George Talbot</li>
   <li>Carlo Wood</li>
 </ul>
-</p>
 
 <p>It couldn't be done without you!</p>
 
