--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -33,7 +33,7 @@ sites</a>.</p>
 <li>France: <a href="ftp://ftp.club-internet.fr/pub/gcc/">ftp.club-internet.fr</a>, thanks to ftpmaster at t-online dot fr</li>
 <li>Germany (Berlin): <a href="ftp://ftp.fu-berlin.de/unix/gnu/gcc/">ftp.fu-berlin.de</a>, thanks to Felix von Leitner (leitner at math dot fu-berlin dot de)</li>
 <li>Germany: <a href="ftp://ftp.gwdg.de/pub/misc/gcc/">ftp.gwdg.de</a>, thanks to emoenke at gwdg dot de</li>
-<li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a>, thanks to ftpadmin at mpi-sb.mpg dot de</a></li>
+<li>Germany: <a href="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/gcc.gnu.org/pub/gcc/">ftp.mpi-sb.mpg.de</a>, thanks to ftpadmin at mpi-sb.mpg dot de</li>
 <li>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/gcc/">ftp.ntua.gr</a>, thanks to ftpadm at ntua dot gr</li>
 <li>Japan: <a href="ftp://ftp.dti.ad.jp/pub/lang/gcc/">ftp.dti.ad.jp</a>, thanks to IWAIZAKO Takahiro (ftp-admin at dti dot ad dot jp)</li>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/gcc/">ftp.eos.hokudai.ac.jp</a>, thanks to ftp-admin at eos dot hokudai dot ac dot jp</li>
@@ -45,7 +45,7 @@ sites</a>.</p>
 <li>Japan: <a href="ftp://core.ring.gr.jp/pub/GNU/gcc/">core.ring.gr.jp</a></li>
 <li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/GNU/gcc/">ftp.ring.gr.jp</a></li>
 <li>Korea (Seoul): <a href="ftp://linux.sarang.net/pub/mirror/gnu/gnu/gcc/">linux.sarang.net</a></li>
-<li>Nijmegen, Netherlands: <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to Jan Cristiaan van Winkel (jc at ATComputing dot nl)</a></li>
+<li>Nijmegen, Netherlands: <a href="ftp://ftp.nluug.nl/mirror/languages/gcc">ftp.nluug.nl</a>, thanks to Jan Cristiaan van Winkel (jc at ATComputing dot nl)</li>
 <li>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a></li>
 <li>Poland: <a href="ftp://ftp.task.gda.pl/pub/gnu/gcc/">ftp.task.gda.pl</a>, thanks to ftpadmin at task dot gda dot pl</li>
 <li>Poland (Warsaw): <a href="ftp://sunsite.icm.edu.pl/pub/gnu/gcc/">sunsite.icm.edu.pl</a>, thanks to sunsite at icm dot edu dot pl</li>
@@ -53,7 +53,7 @@ sites</a>.</p>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/mirrorsites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a></li>
 <li>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub2/CYGNUS/gcc/">ftp1.sinica.edu.tw</a></li>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>, thanks to ftpadm at ftp dot nctu dot edu dot tw</li>
-<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</a></li>
+<li>UK: <a href="ftp://ftp.mirror.ac.uk/sites/sources.redhat.com/pub/gcc/">ftp.mirror.ac.uk</a>, thanks to mirror at mirror dot ac dot uk</li>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/gcc.gnu.org/pub/gcc/">sunsite.doc.ic.ac.uk</a></li>
 <li>US (Virginia): <a href="ftp://mirrors.rcn.net/pub/sourceware/gcc/">mirrors.rcn.net</a> (also available via <a href="http://mirrors.rcn.net/pub/sourceware/gcc/">http</a>)</li>
 <li>US (St. Louis, releases only): <a href="ftp://mirrors.laffeycomputer.com/pub/sourceware.cygnus.com/pub/gcc/releases/">mirrors.laffeycomputer.com</a>, thanks to mirrormaster at laffey dot biz</li>
