--- a/htdocs/projects/beginner.html
+++ b/htdocs/projects/beginner.html
@@ -1201,8 +1201,8 @@ it.</p>
 <h2>C/C++ front end</h2>
 
 <ul>
-<li>Clean up <code>special_function_p</code> and other handling of
-functions with names implying given properties.
+<li><p>Clean up <code>special_function_p</code> and other handling of
+functions with names implying given properties.</p>
 
 <p>All properties <code>special_function_p</code> determines ought to
 be specifiable with attributes as well.  Where
@@ -1220,9 +1220,7 @@ as <code>malloc</code> handled by <code>special_function_p</code>.</p></li>
 
 <li>Find warnings that only the C front end does that would make sense
 with C++ and have the C++ front end support them as well, sharing code
-if possible.</li>
-
-<p>And vice versa.</p>
+if possible.  And vice versa.</li>
 
 <li>More generally, share more code between the C and C++ front ends.</li>
 
@@ -1244,6 +1242,3 @@ has some scripts to do this already.</p></li>
 
 </body>
 </html>
-
-
-
