--- a/htdocs/buildstat.html
+++ b/htdocs/buildstat.html
@@ -10,10 +10,10 @@
 <p>These pages summarize build reports for GCC.</p>
 
 <ul>
-<li><a href="gcc-3.2/buildstat.html">GCC 3.2.x<a></li>
-<li><a href="gcc-3.1/buildstat.html">GCC 3.1.x<a></li>
-<li><a href="gcc-3.0/buildstat.html">GCC 3.0.x<a></li>
-<li><a href="gcc-2.95/buildstat.html">GCC 2.95.x<a></li>
+<li><a href="gcc-3.2/buildstat.html">GCC 3.2.x</a></li>
+<li><a href="gcc-3.1/buildstat.html">GCC 3.1.x</a></li>
+<li><a href="gcc-3.0/buildstat.html">GCC 3.0.x</a></li>
+<li><a href="gcc-2.95/buildstat.html">GCC 2.95.x</a></li>
 </ul>
 
 </body>
