Adjust release dates for 3.2.1 and 3.2.2.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -259,10 +259,10 @@ stages of development, branch points, and releases:</p>
        |                                   GCC 3.2 release (Jul 23 2002)
        |                                            \
        |                                             v
-       |                                   GCC 3.2.1 release (Sep 15 2002)
+       |                                   GCC 3.2.1 release (Oct 15 2002)
        |                                              \
        |                                               v
-       |                                   GCC 3.2.2 release (Nov 15 2002)
+       |                                   GCC 3.2.2 release (...)
        v
   GCC 3.3 Stage 2 (ends Aug 15 2002)
        |
