Note that 3.2.1 has not been released yet. Fix spelling for Objective-C.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -13,9 +13,9 @@
 
 <!-- Changes for later point releases should be added at the top. -->
 
-<h2>Additional changes in GCC 3.2.1</h2>
+<h2>Additional changes in GCC 3.2.1 (not released yet)</h2>
 
-<h3>C/ObjC/C++</h3>
+<h3>C/C++/Objective-C</h3>
 
  <ul>
     <li>The method of constructing the list of directories to be searched
