Added Objective-C changes

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -119,6 +119,35 @@
         aggregate types. </li>
   </ul>
 
+<h3>Objective-C</h3>
+
+  <ul>
+    <li>Generate an error if Objective-C objects are passed by value
+         in function and method calls.</li>
+
+    <li>When <code>-Wselector</code> is used, check the whole list of
+        selectors at the end of compilation, and emit a warning if a
+        <code>@selector()</code> is not known.</li>
+
+    <li>Define <code>__NEXT_RUNTIME__</code> when compiling for the
+        NeXT runtime.</li>
+
+    <li>No longer need to include <code>objc/objc-class.h</code> to
+        compile self calls in class methods (NeXT runtime only).</li>
+
+    <li>New <code>-Wundeclared-selector</code> option.</li>
+
+    <li>Removed selector bloating which was causing object files to be
+        10% bigger on average (GNU runtime only).</li>
+
+    <li>Using at run time <code>@protocol()</code> objects has been
+        fixed in certain situations (GNU runtime only).</li>
+
+    <li>Type checking has been fixed and improved in many situations
+        involving protocols.</li>
+
+  </ul>
+
 <h3>Java</h3>
 
   <ul>
