Fix for web/8168: don't recommend using gccbug.

--- a/htdocs/gnats.html
+++ b/htdocs/gnats.html
@@ -12,17 +12,10 @@ bug tracking system, and it is now used to track GCC bug reports, as
 well. Before submitting a bug report, please read the <a
 href="bugs.html">general instructions</a>.</p>
 
-<p>The preferred way of submitting a bug report is by means of the gccbug
-program that is automatically installed with current versions of GCC
-and submits the bug report by e-mail.</p>
-
-<p>If this is not possible, please use the <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">gnatsweb</a>
+<p>The preferred way of submitting a bug report is by means of the
+<a href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">gnatsweb</a>
 interface. Make sure you include an e-mail address, so we can inform
 you when the status of your report changes.</p>
-
-<p>Both techniques use the same bug database.</p>
-
 
 <h1>Filling out a report</h1> 
 
