Mention removal of "typedef foo = bar"

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -24,6 +24,16 @@
 	the option is ignored to ensure that the default search order
 	for system directories and the special treatment of system header
 	files are not defeated.</li>
+
+    <li>The C and Objective-C compilers no longer accept the "Naming
+        Types" extension (<code>typedef foo = bar</code>); it was
+        already unavailable in C++.  Code which uses it will need to
+        be changed to use the "typeof" extension instead:
+        <code>typedef typeof(bar) foo</code>.  (We have removed this
+        extension without a period of deprecation because it has
+        caused the compiler to crash since version 3.0 and no one
+        noticed until very recently.  Thus we conclude it is not in
+        widespread use.)</li>
  </ul>
 
 <h2>Bug Fixes</h2>
