--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -35,7 +35,17 @@
     <li>The DWARF (version 1) debugging format has been deprecated and 
         will be removed in a future version of GCC.  Version 2 of the 
 	DWARF debugging format will continue to be supported for the
-        forseeable future.</li>
+        foreseeable future.</li>
+
+    <li>The C and Objective-C compilers no longer accept the "Naming
+        Types" extension (<code>typedef foo = bar</code>); it was
+        already unavailable in C++.  Code which uses it will need to
+        be changed to use the "typeof" extension instead:
+        <code>typedef typeof(bar) foo</code>.  (We have removed this
+        extension without a period of deprecation because it has
+        caused the compiler to crash since version 3.0 and no one
+        noticed until very recently.  Thus we conclude it is not in
+        widespread use.)</li>
   </ul>
 
 
