--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -291,6 +291,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 8.0, glibc 2.2.93, kernel 2.4.18</td>
+<td>Successful (with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00509.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Slackware 8.1, glibc 2.0.6, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg01147.html">3.2</a></td>
@@ -421,6 +428,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00729.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux</td>
+<td>Debian 3.0, glibc 2.2.5, binutils 2.12.90</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00668.html">3.2</a></td>
 </tr>
 
 <tr>
