- Add PowerPC changes in gcc-3.3.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -226,6 +226,14 @@
 	 been added to the S/390 port.  Java is now enabled by default
 	 on <code>s390-*-linux*</code> and <code>s390x-*-linux*</code>
 	 targets.</li>
+     <li>The following changes have been made to the PowerPC port:
+	 <ul>
+	   <li>Support for IBM Power4 processor added.</li>
+	   <li>Support for Motorola e500 SPE added.</li>
+	   <li>Support for AIX 5.2 added.</li>
+	   <li>Function and Data sections now supported on AIX.</li>
+	   <li>Sibcall optimizations added.</li>
+	 </ul></li>
   </ul>
 
 
