Two language improvements. Suggested by Matt Bonner <matt_bonner@hp.com>.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -283,7 +283,7 @@ stages of development, branch points, and releases:</p>
 <hr />
 
 <p id="one">[1] Note that no distinction is made between patches which are
-themselves buggy and patches which expose "latent" bugs elsewhere in
+themselves buggy and patches that expose latent bugs elsewhere in
 the compiler.</p>
 
 <p id="two">[2] The Steering Committee is planning to prepare a list of such
