Remove outdated link.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -99,8 +99,7 @@
 	    code using GCJ.
 	</td>
 
-	<td><a href="http://www.pal-project.org/">The PAL Project</a>
-	    submitted by
+	<td>Submitted by
 	    <a href="mailto:strimmer@stat.uni-muenchen.de">
 	    Korbinian Strimmer</a>.
 	</td>
