--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -261,6 +261,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg00937.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.2</td>
 <td>Successful (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00461.html">3.2</a></td>
