--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -190,6 +190,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin, Windows 2000 Pro</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01049.html">3.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-10/msg00555.html">3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
