Add entry for 3.2:   i686-pc-linux-gnu (Caldera 2.4, glibc 2.1.2, kernel 2.2.14)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -191,7 +191,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
-<td>Cygwin, Windows 2000 Pro</td>
+<td>Cygwin 1.3.12, Windows 2000 Pro</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01049.html">3.2</a>
 <br />Test results:
@@ -208,6 +208,13 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00497.html">3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00500.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Caldera 2.4, glibc 2.1.2, kernel 2.2.14</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-10/msg01167.html.html">3.2</a></td>
 </tr>
 
 <tr>
