Do not refer to http://gcc.gnu.org/testresults/ any longer, which has not been updated for more than a year.  Add a new page on testers instead.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -128,10 +128,11 @@ snapshots</a>.</p>
 
 <p>We strive to provide regular, high quality
 <a href="releases.html">releases</a>, which we want to work well on a variety
-of native (including GNU/Linux) and cross targets. To that end, we use an
-extensive <a href="http://gcc.gnu.org/testresults/">test suite</a> as well
-as <a href="benchmarks/">various benchmark suites
-and automated testers</a> to maintain and improve quality.</p>
+of native (including GNU/Linux) and cross targets.
+To that end, we use an extensive <a href="http://gcc.gnu.org/testing/">test
+suite and automated regression testers</a> as well
+as <a href="benchmarks/">various benchmark suites and automated testers</a>
+to maintain and improve quality.</p>
 
 
 <!-- NOTE: Of the following four items, we always want to show exactly
