Oops - left out the GCJNAV elements.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -10,7 +10,7 @@ dt.target { font-weight: bold }
 
 <body>
 
-<!--<GCJNAV>-->
+<GCJNAV>
 
 <br /><br />
 <h1>GCJ Status</h1>
@@ -138,7 +138,7 @@ it isn't very useful.</dd>
 <dd>Ok, in CVS (target only).</dd>
 </dl>
 
-<!--</GCJNAV>-->
+</GCJNAV>
 
 </body>
 </html>
