Fix typo pointed out Fergus Henderson.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -38,7 +38,7 @@ and dynamically loaded classes. Corresponds to JDK's <code>java</code> command.<
 (though non-standard) API for writing Java methods in C++.</li>
 <li> Verification, both at compile time (compiling classes to
 native) and run-time (loading classes).  Both miss some tests, and
-you should get (yet) rely on their correctness for security.</li>
+you should not (yet) rely on their correctness for security.</li>
 <li>A "conservative" garbage collector.</li>
 <li>An extensive class library - see below.</li>
 </ul>
