--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -46,7 +46,7 @@ you should not (yet) rely on their correctness for security.</li>
 <table id="packages" border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
- Implemented packages
+ Implemented Packages
  </th>
 </tr>
 </table>
@@ -59,7 +59,7 @@ it isn't very useful.</dd>
 <dd>A lot of code exists, but not enough for use in real applications.</dd>
 <dt class="package">java.beans</dt>
 <dd>Believed to be functional and complete, should be compatible with JDK 1.4.</dd>
-<dt class="package">java.io<dt>
+<dt class="package">java.io</dt>
 <dd>Ok.</dd>
 <dt class="package">java.lang</dt>
 <dd>Ok.</dd>
