Fix more typos.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -69,13 +69,13 @@ it isn't very useful.</dd>
 <dd>Ok.  Does not check access permissions.</dd>
 <dt class="package">java.math<dt>
 <dd>Ok.</dd>
-<dt class="package">java.net<dt>
+<dt class="package">java.net</dt>
 <dd>Ok.</dd>
-<dt class="package">java.nio<dt>
+<dt class="package">java.nio</dt>
 <dd>Ok.</dd>
 <dt class="package">java.rmi</dt>
 <dd>Ok.</dd>
-<dt class="package">java.security<dt>
+<dt class="package">java.security</dt>
 <dd>Code exist; completeness unknown.</dd>
 <dt class="package">java.sql<dt>
 <dd>Ok, should be compatible with JDK 1.4.</dd>
@@ -91,13 +91,13 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="package">javax.accessibility<dt>
 <dd>Some code; status unknown.</dd>
-<dt class="package">javax.naming<dt>
+<dt class="package">javax.naming</dt>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.sql<dt>
 <dd>Some code; status unknown.</dd>
-<dt class="package">javax.swing<dt>
+<dt class="package">javax.swing</dt>
 <dd>Some code, but not enough for real applications.</dd>
-<dt class="package">javax.transaction<dt>
+<dt class="package">javax.transaction</dt>
 <dd>Some code; status unknown.</dd>
 </dl>
 
