Fix more typos.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -67,7 +67,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="package">java.lang.reflect</dt>
 <dd>Ok.  Does not check access permissions.</dd>
-<dt class="package">java.math<dt>
+<dt class="package">java.math</dt>
 <dd>Ok.</dd>
 <dt class="package">java.net</dt>
 <dd>Ok.</dd>
@@ -77,7 +77,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="package">java.security</dt>
 <dd>Code exist; completeness unknown.</dd>
-<dt class="package">java.sql<dt>
+<dt class="package">java.sql</dt>
 <dd>Ok, should be compatible with JDK 1.4.</dd>
 <dt class="package">java.util</dt>
 <dd>Ok.</dd>
@@ -93,7 +93,7 @@ it isn't very useful.</dd>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.naming</dt>
 <dd>Some code; status unknown.</dd>
-<dt class="package">javax.sql<dt>
+<dt class="package">javax.sql</dt>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.swing</dt>
 <dd>Some code, but not enough for real applications.</dd>
@@ -132,7 +132,7 @@ it isn't very useful.</dd>
 <dd>Some kludges needed.</dd>
 <dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpa</dt>
 <dd>Ok.</dd>
-<dt class="target">GNU/Linux on XScale using ELF</dd>
+<dt class="target">GNU/Linux on XScale using ELF</dt>
 <dd>Ok.</dd>
 <dt class="target">IBM s390x</dd>
 <dd>Ok, in CVS.</dd>
