Fix more typos.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -89,7 +89,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="package">java.text</dt>
 <dd>Ok.</dd>
-<dt class="package">javax.accessibility<dt>
+<dt class="package">javax.accessibility</dt>
 <dd>Some code; status unknown.</dd>
 <dt class="package">javax.naming</dt>
 <dd>Some code; status unknown.</dd>
@@ -134,7 +134,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on XScale using ELF</dt>
 <dd>Ok.</dd>
-<dt class="target">IBM s390x</dd>
+<dt class="target">IBM s390x</dt>
 <dd>Ok, in CVS.</dd>
 <dt class="target">Hitachi SH-3/4 micro-controller</dd>
 <dd>Ok, in CVS (target only).</dd>
