--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -136,7 +136,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="target">IBM s390x</dt>
 <dd>Ok, in CVS.</dd>
-<dt class="target">Hitachi SH-3/4 micro-controller</dd>
+<dt class="target">Hitachi SH-3/4 micro-controller</dt>
 <dd>Ok, in CVS (target only).</dd>
 </dl>
 
