* status.html: Fixed typos.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -16,7 +16,7 @@ dt.target { font-weight: bold }
 <h1>GCJ Status</h1>
 
 Status of GCJ as of the current release (gcc 3.2).
-Improvements that are only in the CVS reporsitory, but not
+Improvements that are only in the CVS repository, but not
 in gcc 3.2 are marked as "in CVS".
 
 <table id="features" border="0" cellpadding="4" width="95%">
@@ -130,7 +130,7 @@ it isn't very useful.</dd>
 <dd>Works for target; works for host (in CVS).  Is incomplete.</dd>
 <dt class="target">PPC Darwin (including MacOS X)</dt>
 <dd>Some kludges needed.</dd>
-<dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpa</dt>
+<dt class="target">DEC OSF 4.0f and OSF 5.1 on Alpha</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on XScale using ELF</dt>
 <dd>Ok.</dd>
