* status.html: Update Solaris info, use consistent naming for SPARC, Alpha.

--- a/htdocs/java/status.html
+++ b/htdocs/java/status.html
@@ -114,7 +114,7 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="target">FreeBSD on the Pentium-compatible PCs</dt>
 <dd>Ok.</dd>
-<dt class="target">GNU/Linux on alphaev67</dt>
+<dt class="target">GNU/Linux on Alpha</dt>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on the Itanium (ia64) architecture</dt>
 <dd>Ok.</dd>
@@ -122,8 +122,9 @@ it isn't very useful.</dd>
 <dd>Ok.</dd>
 <dt class="target">GNU/Linux on AMD x86-64 ("Hammer") architecture </dt>
 <dd>Ok, in CVS (but building with multilibs enabled needs libtool patch).</dd>
-<dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on Sparc</dt>
-<dd>Ok.</dd>
+<dt class="target">Solaris 2.5.1, 2.6, 2.7, 2.8 on SPARC</dt>
+<dd>Ok for 32- and 64-bit ABIs.  Byte-code interpreter not currently
+supported.</dd>
 <dt class="target">SGI Irix 6.5 on Mips</dt>
 <dd>Works, but some tricks needed.</dd>
 <dt class="target">Windows on the Intel PC platform, using the MingW32 compiler</dt>
