Improve description of gcc-patches.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -50,8 +50,9 @@
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-patches/">gcc-patches</a></b>
   is a relatively high volume list for patch submissions and discussion of
-  particular patches.  All patch submissions and all discussion for a
-  particular patch should be sent to this list.</li>
+  particular patches.  All patches (including those for front ends and web
+  pages) and all discussion for a particular patch should be sent to this
+  list.</li>
 
   <li><b><a href="http://gcc.gnu.org/ml/gcc-testresults/">
   gcc-testresults</a></b> is a moderate volume list where test results for
